# papercheck

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml  耿同学.skill
papercheck/: __init__.py  __main__.py  cli.py  findings.py  pipeline.py  report.py
papercheck/detect/: _imaging.py  chart_consistency.py  citation_check.py  image_dup.py  image_manip.py  llm_judge.py  splice.py  stats_anomaly.py  text_forensics.py
papercheck/extract/: panels.py  pdf_images.py  pdf_tables.py  pdf_text.py
papercheck/index/: fingerprint_db.py
papercheck/llm/: __init__.py  provider.py
scripts/: run.sh  setup.sh
